crates/reap-pm-live/tests/ui/public_lane_failure_is_move_only.rs
use reap_pm_live::{PmPublicBookDelivery, PmPublicLaneEnqueueError};

fn replay(failure: PmPublicLaneEnqueueError<PmPublicBookDelivery>) {
    let _first = failure;
    let _second = failure;
}

fn main() {}
